--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Medilab</title>
+<link rel="icon" href="images/favicon.png">
 </head>
 <link rel="stylesheet" href="styles.css">
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
